--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
 <body>
     <h1>Chat app using Sockets</h1>
 
-
-    <button id="btn">Click me</button>
+    <input type="text" name="" id="newmsg">
+    <button id="btn">Send</button>
+    <ul id="msglist">
+    </ul>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
