Added chat logic

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
 <body>
     <h1>Chat app using Sockets</h1>
 
-    <input type="text" name="" id="newmsg">
+    <input type="text" placeholder="room id..." id="roomId">
+    <input type="text" placeholder="user id..." id="username">
+    <input type="text" placeholder="message..." id="newmsg">
     <button id="btn">Send</button>
     <ul id="msglist">
     </ul>
